--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,10 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull and run
-      run: |
+      run:
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull"
+    - name: run http
+      run: 
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "screen -x GateKeeper && python -m http.server ${{ secrets.HTTP_PORT }} && exit
     - name: cleanup
       run: rm -rf ~/.ssh
