--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull"
     - name: run screen
       run:
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "screen -S GateKeeper"
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && screen -S GateKeeper"
     - name: run server
       run:
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "python -m http.server 8765 && screen -d"
