--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
     - name: connect and pull
       run:
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull"
-    
+    - name : run screen
+      run:
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "screen -S gatekeeper"
     - name: run server
       run:
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && python -m http.server ${{ secrets.HTTP_PORT }}"
